<resources>
    <string name="app_name">Star War People Details</string>
    <string name="action_refresh">Refresh</string>
    <string name="failure_network_connection">No Network Connection.</string>
    <string name="failure_server_error">Server Error.</string>
    <string name="failure_people_list_unavailable">People List Unavailable.</string>
    <string name="failure_people_non_existent">People List Not Existent.</string>
    <string name="content_description_empty">No content description.</string>
    <string name="forward_slash">/</string>
    <string name="space">" "</string>
    <string name="empty_list">No list found. Please try with different name</string>
    <string name="ok">Ok</string>
    <string name="try_again_later">Please try again later.</string>
    <string name="userName">User Name : </string>
    <string name="user_name_hint">Enter your user name hear</string>
    <string name="email">Email Id : </string>
    <string name="email_id_hint">Enter your email id here</string>
    <string name="login">Login</string>
    <string name="dash">-</string>
    <string name="empty" />
    <string name="peopleDetails_details">User Details</string>
</resources>
