<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:paddingLeft="@dimen/margin_10">


        <TextView
            android:id="@+id/tv_login_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userName"
            android:theme="@style/PeopleDetailsTitleHeading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/tv_login_UserName_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_5"
            android:layout_marginTop="@dimen/margin_5"
            android:background="@drawable/white_border_rectangle"
            android:hint="@string/user_name_hint"
            android:minWidth="30dp"
            android:padding="@dimen/margin_5"
            android:singleLine="true"
            android:text="@string/empty"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/tv_login_userName"
            app:layout_constraintStart_toEndOf="@+id/tv_login_userName"
            app:layout_constraintTop_toTopOf="@+id/tv_login_userName" />

        <TextView
            android:id="@+id/tv_login_email_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30"
            android:text="@string/email"
            android:theme="@style/PeopleDetailsTitleHeading"
            app:layout_constraintEnd_toStartOf="@+id/tv_login_email_val"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_userName" />

        <EditText
            android:id="@+id/tv_login_email_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_5"
            android:background="@drawable/white_border_rectangle"
            android:hint="@string/email_id_hint"
            android:minWidth="30dp"
            android:padding="@dimen/margin_5"
            android:text="@string/empty"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/tv_login_email_lbl"
            app:layout_constraintStart_toEndOf="@+id/tv_login_email_lbl"
            app:layout_constraintTop_toTopOf="@+id/tv_login_email_lbl" />

        <Button
            android:id="@+id/b_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@color/black"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/text_20"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_email_val" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>